Remove unnecessary <div>, added linked tag to GitHub respository, formatted tag via CSS

--- a/index.html
+++ b/index.html
@@ -297,18 +297,16 @@
                   </ul>
                 </div>
               </div>
-              <div class="ocean">
-                <div class="wave"></div>
-                <div class="wave"></div>
-              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="ocean">
-      <div class="wave"></div>
-      <div class="wave"></div>
+    <div class="code-tag">
+      <a href="https://github.com/kmaglonz/weather-app" target="_blank"
+        >Open-source code</a
+      >
+      by Kristen Maglonzo
     </div>
     <script src="src/index.js"></script>
   </body>
