Renamed and redirected the .js files
the .js file was originally named index.js but I renamed it to app.js and had to therefore fix the pathway that was externally linking the .js file in the .html file

--- a/index.html
+++ b/index.html
@@ -308,6 +308,6 @@
       >
       by Kristen Maglonzo
     </div>
-    <script src="src/index.js"></script>
+    <script src="src/app.js"></script>
   </body>
 </html>
