Assigned IDs and manipulated JS to allow updated day and time to display

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 >
               </h6>
               <h5 class="current-time">
-                <span id="todays-time">4:23</span> <span id="am-pm">PM</span>
+                <span id="todays-time">4:23</span> <span id="am-pm"></span>
               </h5>
             </div>
           </div>
@@ -159,7 +159,8 @@
                   </div>
                 </div>
                 <h4 class="mx-3 mt-2 update-text">
-                  Last updated: Yesterday at 4:20 PM
+                  Last updated: <span id="update-day"></span> at
+                  <span id="update-time"></span> <span id="update-am-pm"></span>
                 </h4>
               </div>
               <hr />
