Incorporated relevant icon programming from API

--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
                     <img
                       src="images/weather-icons/animated/day.svg"
                       alt="Sunny-Animated"
+                      id="icon"
                       class="sunny-icon"
                       width="150"
                     />
