--- a/index.html
+++ b/index.html
@@ -127,10 +127,9 @@
                         <span id="main-degrees"></span>º
                       </h2>
                       <span class="units">
-                        <a href="#" id="celsius-link">°C</a>|<a
+                        <a href="#" id="celsius-link" class="active">°C</a>|<a
                           href="#"
                           id="fahrenheit-link"
-                          class="inactive"
                           >ºF</a
                         >
                       </span>
