--- a/index.html
+++ b/index.html
@@ -164,25 +164,7 @@
                 </h4>
               </div>
               <hr />
-              <div class="six-day-forecast">
-                <div class="row">
-                  <div class="col-2">
-                    <div class="forecast-day">Saturday</div>
-                    <div class="forecast-icon">
-                      <img
-                        src="images/weather-icons/animated/cloudy-day-1.svg"
-                        alt="sunny-icon"
-                      />
-                    </div>
-                    <div class="forecast-high-temp">
-                      30º<span class="degree-type">C</span>
-                    </div>
-                    <div class="forecast-low-temp">
-                      17º<span class="degree-type">C</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
+              <div class="six-day-forecast" id="forecast"></div>
             </div>
           </div>
         </div>
