Update index.html or mistake with wind speed
changed km/h to match m/s to match api default value for the wind speed

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                         Humidity: <span id="humidity"></span>%
                       </li>
                       <li class="wind-speed">
-                        Wind: <span id="wind-speed"></span> km/h
+                        Wind: <span id="wind-speed"></span> m/s
                       </li>
                       <li class="feels-like-temp">
                         Feels Like: <span id="feels-like-temp"></span>ºC
